--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "tek-html",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "tek library for static html",
+    "main":"./lib/index",
     "bin": {
         "tek-h": "bin/tek-html.js",
         "tek-html": "bin/tek-html.js"
