--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tek-html",
-    "version": "0.1.6",
+    "version": "0.1.7",
     "description": "tek library for static html",
     "main": "./lib/index",
     "repository": {
@@ -22,6 +22,7 @@
         "tek": "*",
         "html": "*",
         "ent": "*",
+        "dateformat":"*",
         "commander": "*",
         "request": "*",
         "cheerio": "*"
