--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tek-html",
-    "version": "0.1.10",
+    "version": "0.1.12",
     "description": "tek library for static html",
     "main": "./lib/index",
     "repository": {
@@ -23,6 +23,7 @@
         "html": "*",
         "ent": "*",
         "dateformat":"*",
+        "uglify-js":"*",
         "commander": "*",
         "request": "*",
         "cheerio": "*"
